3053, pt. 1: No phone # fields for non-main travelers

--- a/project/res/layout-sw600dp/section_flight_edit_traveler.xml
+++ b/project/res/layout-sw600dp/section_flight_edit_traveler.xml
@@ -42,6 +42,7 @@
             android:orientation="horizontal">
 
             <FrameLayout
+                android:id="@+id/phone_edit_container"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="40dp"
