--- a/project/res/layout/section_flight_edit_traveler_pt1.xml
+++ b/project/res/layout/section_flight_edit_traveler_pt1.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical" />
 
     <LinearLayout
+        android:id="@+id/phone_edit_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
