--- a/project/res/layout/fragment_results_guests.xml
+++ b/project/res/layout/fragment_results_guests.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFFFFF"
+    android:background="#eaeaea"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:orientation="vertical">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/tablet_guest_picker_header"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/results_list_header_height"
             android:layout_gravity="left"
-            android:textSize="24dp"
+            android:paddingLeft="@dimen/hotel_flight_card_padding_x"
             android:text="@string/travelers"
+            android:textSize="@dimen/results_list_header_text_size"
+            android:textColor="#222222"
+            android:gravity="center_vertical"
             app:textStyle="light" />
 
         <com.expedia.bookings.widget.GuestPicker
             android:id="@+id/guest_picker"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/results_guest_picker_padding_x"
+            android:paddingRight="@dimen/results_guest_picker_padding_x"/>
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/tablet_lap_infant_alert"
