--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -81,10 +81,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minHeight="64dp"
-                android:paddingLeft="16dp"
-                android:paddingTop="20dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="32dp"
+                android:paddingTop="22dp"
+                android:paddingLeft="32dp"
+                android:paddingRight="26dp"
+                android:paddingBottom="34dp"
                 android:background="@drawable/bg_tablet_search_results_popup">
 
                 <!-- Calendar popup content -->
@@ -166,6 +166,7 @@
                     android:layout_height="match_parent"
                     android:visibility="invisible"
                     android:textSize="18dp"
+                    android:background="@android:color/holo_blue_bright"
                     android:layout_gravity="center_vertical" />
 
             </FrameLayout>
@@ -180,9 +181,9 @@
                 android:drawablePadding="8dp"
                 android:drawableLeft="@drawable/ic_tablet_search_results_popup_done_check"
                 android:paddingLeft="16dp"
-                android:paddingTop="20dp"
+                android:paddingTop="22dp"
                 android:paddingRight="24dp"
-                android:paddingBottom="32dp"
+                android:paddingBottom="34dp"
                 android:text="@string/done"
                 android:textAllCaps="true"
                 android:textColor="@color/tablet_results_search_blue"
