3131 traveler picker polish - portrait

--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -211,7 +211,7 @@
             android:visibility="invisible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFF" />
+            android:background="@color/results_traveler_picker_bg" />
 
     </com.expedia.bookings.widget.FrameLayoutTouchController>
 
