3083: Adjusted apparent results list header height

--- a/project/res/layout/fragment_results_gde_flights.xml
+++ b/project/res/layout/fragment_results_gde_flights.xml
@@ -53,8 +53,7 @@
         android:id="@+id/histogram_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/results_list_header_height"
-        android:paddingTop="8dp"/>
+        android:layout_marginTop="@dimen/results_list_header_height"/>
 
     <com.expedia.bookings.widget.CenteredCaptionedIcon
         android:id="@+id/missing_flight_info_view"
