--- a/project/res/values-sw600dp-port/bools.xml
+++ b/project/res/values-sw600dp-port/bools.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <bool name="show_tripbucket_date">true</bool>
+    <bool name="show_waypoint_cancel_button">false</bool>
 
 </resources>
