--- a/project/res/values-sw600dp/bools.xml
+++ b/project/res/values-sw600dp/bools.xml
@@ -3,5 +3,6 @@
 
     <bool name="show_now_booking_heading">false</bool>
     <bool name="show_tripbucket_date">false</bool>
+    <bool name="show_waypoint_cancel_button">true</bool>
 
 </resources>
