--- a/project/res/layout/section_flight_leg_tablet_blue_card.xml
+++ b/project/res/layout/section_flight_leg_tablet_blue_card.xml
@@ -81,14 +81,14 @@
         <com.expedia.bookings.widget.FlightTripView
             android:id="@+id/flight_trip_view"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/flight_trip_view_height"
             android:layout_marginLeft="@dimen/hotel_flight_card_content_margin_x"
             android:layout_marginRight="@dimen/hotel_flight_card_content_margin_x"
             android:layout_gravity="center"
             app:flightLineColor="#ffffff"
             app:waypointTextColor="@color/tablet_flight_trip_view_airport_text_color"
-            app:waypointTextSize="@dimen/tablet_result_row_secondary_text_size"
-            app:waypointTextTopMargin="4dp"
+            app:waypointTextSize="@dimen/flight_trip_view_airport_text_size"
+            app:waypointTextTopMargin="@dimen/flight_trip_view_airport_top_margin"
             app:waypointTextTypeface="medium"/>
 
     </FrameLayout>
