--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -119,6 +119,9 @@
     <dimen name="hotel_room_rate_button_height">32dp</dimen>
 
     <!-- Tablet Flights -->
+    <dimen name="flight_trip_view_height">36dp</dimen>
+    <dimen name="flight_trip_view_airport_top_margin">4dp</dimen>
+    <dimen name="flight_trip_view_airport_text_size">13dp</dimen>
     <dimen name="flight_header_bottom_margin">140dp</dimen>
     <dimen name="plane_window_height">600dp</dimen>
     <dimen name="plane_window_text_offset">-60dp</dimen>
