--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -75,6 +75,12 @@
     <dimen name="amenity_layout_width">70dp</dimen>
     <dimen name="amenity_icon_size">42dp</dimen>
 
+    <!-- Flights -->
+    <dimen name="flight_trip_view_height">42dp</dimen>
+    <dimen name="flight_trip_view_airport_top_margin">2dp</dimen>
+    <dimen name="flight_trip_view_airport_text_size">14dp</dimen>
+
+
     <!-- Hotel/Flight/Tripbucket Card dimensions -->
     <dimen name="hotel_flight_card_height">150dp</dimen>
     <dimen name="hotel_flight_card_height_with_padding">162dp</dimen>
