--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -67,7 +67,7 @@
         android:visibility="invisible"
         android:background="@color/launch_pin_detail_background"/>
 
-    <FrameLayout
+    <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/no_connectivity_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -119,6 +119,6 @@
                 android:textColor="#ffffff"
                 app:textStyle="light"/>
         </LinearLayout>
-    </FrameLayout>
+    </com.expedia.bookings.widget.FrameLayoutTouchController>
 
 </FrameLayout>
