--- a/project/res/layout/snippet_trip_bucket_expanded_price.xml
+++ b/project/res/layout/snippet_trip_bucket_expanded_price.xml
@@ -5,7 +5,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y" >
+        android:layout_marginTop="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y"
+        android:orientation="horizontal" >
 
         <com.expedia.bookings.widget.TextView
             android:layout_width="wrap_content"
@@ -21,22 +22,36 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
 
-        <ImageView
+        <LinearLayout
+            android:id="@+id/price_expanded_bucket_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginRight="8dp"
-            android:src="@drawable/ic_tablet_checkout_price_breakdown" />
+            android:background="@drawable/bg_clickable_row"
+            android:orientation="horizontal"
+            android:paddingBottom="2dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="2dp" >
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/price_expanded_bucket_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:paddingBottom="1dp"
-            android:textColor="#444444"
-            android:textSize="18sp"
-            app:textStyle="bold" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="8dp"
+                android:src="@drawable/ic_tablet_checkout_price_breakdown" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/price_expanded_bucket_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingBottom="1dp"
+                android:textColor="#444444"
+                android:textSize="18sp"
+                app:textStyle="bold" />
+
+        </LinearLayout>
 
     </LinearLayout>
 </merge>
