--- a/project/res/values-sw600dp/colors.xml
+++ b/project/res/values-sw600dp/colors.xml
@@ -19,6 +19,7 @@
     <color name="sliding_group_text_bright">#f4f5f7</color>
     <color name="sliding_group_text_dim">#4a4f54</color>
     <color name="tablet_results_search_blue">#3d6a99</color>
+    <color name="tablet_search_params_text">#ffffff</color>
 
     <!-- Tablet Hotels -->
     <color name="hotel_details_sticky_header_background">#4e4e52</color>
