--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -166,42 +166,9 @@
         <item name="android:showDividers" tools:targetApi="11">middle</item>
     </style>
 
-    <style name="V2.Widget.LinearLayout.TabletSearchControls">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:orientation">horizontal</item>
-    </style>
-
-    <style name="V2.Widget.LinearLayout.TabletSearchRightButtonsContainer">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:orientation">horizontal</item>
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:layout_weight">0</item>
-        <item name="android:layout_gravity">center_vertical|right</item>
-    </style>
-
     <!-- TextView styling -->
 
     <style name="V2.Widget.TextView" />
-
-    <style name="V2.Widget.TextView.TabletSearchDestination">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
-        <item name="android:textSize">@dimen/search_params_destination_text_size</item>
-        <item name="minTextSize">14dp</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:gravity">center_vertical</item>
-        <item name="android:paddingLeft">32dp</item>
-        <item name="android:paddingRight">16dp</item>
-        <item name="android:drawablePadding">8dp</item>
-        <item name="android:layout_gravity">center_vertical|left</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:drawableLeft">@drawable/ic_action_bar_magnifying_glass</item>
-        <item name="android:background">?android:attr/selectableItemBackground</item>
-        <item name="textStyle">light</item>
-    </style>
 
     <style name="V2.Widget.TextView.TabletSearch" />
 
@@ -305,12 +272,13 @@
 
     <style name="V2.Widget.TextView.SearchParams">
         <item name="android:textSize">@dimen/search_params_right_container_text_size</item>
-        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textColor">@color/tablet_search_params_text</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:singleLine">true</item>
         <item name="textStyle">light</item>
     </style>
 
