--- a/project/res/layout/fragment_results_list_loading.xml
+++ b/project/res/layout/fragment_results_list_loading.xml
@@ -9,24 +9,54 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/results_list_header_height" />
 
-    <View
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/hotel_flight_card_height"
         android:layout_marginBottom="@dimen/hotel_flight_card_padding_y"
         android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
         android:layout_marginRight="@dimen/hotel_flight_card_padding_x"
-        android:layout_marginTop="@dimen/hotel_flight_card_padding_y" />
+        android:layout_marginTop="@dimen/hotel_flight_card_padding_y"
+        android:background="#5c6874" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_gravity="top"
+            android:background="@drawable/card_corners_top_white" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/card_corners_bottom_white" />
+
+    </FrameLayout>
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="@dimen/results_list_spacer_height" />
 
-    <View
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/hotel_flight_card_height"
         android:layout_marginBottom="@dimen/hotel_flight_card_padding_y"
         android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
         android:layout_marginRight="@dimen/hotel_flight_card_padding_x"
-        android:layout_marginTop="@dimen/hotel_flight_card_padding_y" />
+        android:layout_marginTop="@dimen/hotel_flight_card_padding_y"
+        android:background="#5c6874" >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:layout_gravity="top"
+            android:background="@drawable/card_corners_top_white" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_gravity="bottom"
+            android:background="@drawable/card_corners_bottom_white" />
+
+    </FrameLayout>
 
 </LinearLayout>
