--- a/project/res/layout/row_suggestion_dropdown.xml
+++ b/project/res/layout/row_suggestion_dropdown.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.TextView
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
-    style="?android:attr/dropDownItemStyle"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_marginLeft="2dp"
     android:drawablePadding="3dp"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp"
+    android:gravity="center_vertical"
     android:singleLine="true"
-    android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
-    android:textColor="#F3F3F3"
-    android:textSize="17sp"
-    app:textStyle="light" />
+    android:textColor="#f3f3f3"
+    android:textSize="17sp" />
