--- a/project/res/layout/row_suggestion_dropdown.xml
+++ b/project/res/layout/row_suggestion_dropdown.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.expedia.bookings.widget.TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="48dp"
@@ -10,4 +12,5 @@
     android:gravity="center_vertical"
     android:singleLine="true"
     android:textColor="#f3f3f3"
-    android:textSize="17sp" />
+    android:textSize="17sp"
+    app:textStyle="light" />
