--- a/project/res/layout/fragment_results_gde_flights.xml
+++ b/project/res/layout/fragment_results_gde_flights.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="left"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="@string/when_to_fly"
+            android:text="@string/flight_trends"
             android:textSize="@dimen/results_list_header_text_size"
             app:textStyle="light" />
 
