--- a/project/res/layout-sw600dp-port/snippet_search_controls.xml
+++ b/project/res/layout-sw600dp-port/snippet_search_controls.xml
@@ -36,7 +36,7 @@
         <com.expedia.bookings.widget.TextView
             android:id="@+id/origin_btn"
             style="@style/V2.Widget.TextView.SearchParams"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:drawableLeft="@drawable/ic_param_origin"
