--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -58,7 +58,8 @@
         android:id="@+id/waypoint_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:background="@color/launch_pin_detail_background"/>
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/pin_detail_container"
