3264: Adjust padding and maxLines so price doesn't disappear

--- a/project/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
@@ -11,7 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="2"
         android:textColor="#444444"
         android:textSize="19sp"
         android:visibility="gone"
@@ -31,7 +33,9 @@
             android:layout_marginRight="@dimen/tablet_checkout_trip_bucket_expanded_padding_x"
             android:drawableLeft="@drawable/ic_tablet_checkout_guest"
             android:drawablePadding="8dp"
-            android:gravity="center"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
             android:textColor="#444444"
             android:textSize="14sp"
             app:textStyle="light" />
@@ -43,7 +47,9 @@
             android:layout_marginLeft="@dimen/tablet_checkout_trip_bucket_expanded_padding_x"
             android:drawableLeft="@drawable/ic_tablet_checkout_calendar"
             android:drawablePadding="8dp"
-            android:gravity="center"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
             android:textColor="#444444"
             android:textSize="14sp"
             app:textStyle="light" />
@@ -55,6 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:textColor="#444444"
         android:textSize="14sp"
         android:visibility="gone"
