3280: Tiles in stacks don't get darker as they go back

--- a/project/res/values-sw600dp/colors.xml
+++ b/project/res/values-sw600dp/colors.xml
@@ -10,6 +10,7 @@
     <color name="tablet_launch_map_overlay">#66131f40</color>
     <color name="tablet_bg_tiles_blend">#232c45</color>
     <color name="tablet_collection_back_image_overlay">#e5141d36</color>
+    <color name="tablet_collection_middle_image_overlay">#b3141d36</color>
     <color name="launch_pin_detail_background">#b2070f24</color>
 
     <!-- Tablet Results -->
