--- a/project/res/layout-sw600dp/fragment_sold_out.xml
+++ b/project/res/layout-sw600dp/fragment_sold_out.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/sold_out_frowny" />
+            android:background="@drawable/sold_out_frowny"/>
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/sold_out_text_view"
@@ -32,25 +32,13 @@
             android:gravity="center"
             android:textColor="#ffffff"
             android:textSize="19sp"
-            app:textStyle="light" />
+            app:textStyle="light"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/remove_sold_out_button"
-                style="@style/TabletSoldOutButtonStyle"
-                android:layout_below="@+id/sold_out_text_view"
-                android:layout_marginRight="24dp" />
-
-            <Button
-                android:id="@+id/select_new_item_button"
-                style="@style/TabletSoldOutButtonStyle"
-                android:layout_below="@+id/sold_out_text_view"
-                android:layout_toRightOf="@+id/remove_sold_out_button" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/select_new_item_button"
+            style="@style/TabletSoldOutButtonStyle"
+            android:layout_below="@+id/sold_out_text_view"/>
 
     </LinearLayout>
 </LinearLayout>
