3296: Flight details polish for non leg elements
Flight leg elements coming up later

--- a/project/res/layout/fragment_tablet_flight_details.xml
+++ b/project/res/layout/fragment_tablet_flight_details.xml
@@ -24,47 +24,40 @@
 
             <!-- Add trip now! -->
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="64dp"
                 android:background="@drawable/bg_flight_details_tablet_grey_top"
-                android:paddingBottom="16dp"
                 android:paddingLeft="@dimen/tablet_flight_details_horizontal_padding"
                 android:paddingRight="@dimen/tablet_flight_details_horizontal_padding"
-                android:paddingTop="16dp">
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/details_time_header"
                     style="@style/V2.Widget.TextView.FlightDetailsHeader"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/details_price_text_view"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true" />
+                    android:layout_weight="1"
+                    android:layout_marginRight="12dp"
+                    android:gravity="right"
+                    android:textColor="#3f86c2"
+                    android:textSize="15sp" />
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/details_add_trip_button"
                     style="@style/V2.Widget.TextView.RateButton.AddToTrip"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right"
-                    android:layout_marginRight="4dp"
+                    android:layout_height="32dp"
                     android:paddingBottom="4dp"
                     android:paddingTop="4dp" />
 
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/details_price_text_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toLeftOf="@id/details_add_trip_button"
-                    android:layout_marginRight="12dp"
-                    android:textColor="#3f86c2"
-                    android:textSize="15dp" />
-
-
-            </RelativeLayout>
+            </LinearLayout>
 
             <ScrollView
                 android:id="@+id/flight_details_scroll_view"
@@ -88,7 +81,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="18dp"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginBottom="24dp"
                         android:orientation="horizontal">
 
                         <LinearLayout
@@ -144,8 +138,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/one_px_hdpi_two_px_xhdpi"
-                        android:layout_marginBottom="18dp"
-                        android:layout_marginTop="18dp"
+                        android:layout_marginBottom="@dimen/tablet_flight_details_divider_margin"
                         android:background="#e5e5e5" />
 
                     <!-- The Flight leg segments get added to the hierarchy at runtime -->
