--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -10,6 +10,8 @@
     <dimen name="flight_header_bottom_margin">200dp</dimen>
     <dimen name="plane_window_height">500dp</dimen>
     <dimen name="plane_window_text_offset">-50dp</dimen>
+    <dimen name="tablet_flight_details_statistic_textsize">18sp</dimen>
+    <dimen name="tablet_flight_details_divider_margin">13dp</dimen>
 
     <dimen name="hotel_checkout_overview_image_height">320dp</dimen>
 
