--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -122,6 +122,8 @@
     <dimen name="plane_window_height">600dp</dimen>
     <dimen name="plane_window_text_offset">-60dp</dimen>
     <dimen name="flight_search_calendar_height">380dp</dimen>
+    <dimen name="tablet_flight_details_statistic_textsize">15sp</dimen>
+    <dimen name="tablet_flight_details_divider_margin">7dp</dimen>
 
     <dimen name="hotel_checkout_overview_image_height">240dp</dimen>
 
