--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -210,6 +210,7 @@
     <style name="V2.Widget.TextView.RateButton.AddToTrip">
         <item name="android:text">@string/room_rate_button_add_to_trip</item>
         <item name="android:background">@drawable/tablet_hotel_room_add_button</item>
+        <item name="android:textSize">14dp</item>
     </style>
 
     <style name="V2.Widget.TextView.RateButton.SelectRoom">
@@ -236,10 +237,10 @@
     <style name="V2.Widget.TextView.FilterHeader">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">true</item>
         <item name="android:textColor">#818181</item>
+        <item name="android:textSize">15sp</item>
         <item name="textStyle">normal</item>
-        <item name="textAllCaps">true</item>
     </style>
 
     <style name="V2.Widget.TextView.FakeSpinner">
@@ -265,7 +266,7 @@
         <item name="android:layout_gravity">center</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawablePadding">@dimen/tablet_flight_details_statistic_drawable_spacing</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textSize">@dimen/tablet_flight_details_statistic_textsize</item>
         <item name="android:textColor">#4c4c4c</item>
         <item name="textStyle">light</item>
     </style>
