--- a/project/res/layout-port/fragment_results_list_loading.xml
+++ b/project/res/layout-port/fragment_results_list_loading.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical" >
 
-    <Space
-        android:layout_width="0dp"
-        android:layout_height="@dimen/results_list_header_height" />
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/loading_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/results_list_header_height"
+        android:layout_gravity="center_vertical|left"
+        android:layout_marginLeft="@dimen/hotel_flight_card_padding_x"
+        android:gravity="center_vertical|left"
+        android:textSize="@dimen/results_list_header_text_size"
+        app:textStyle="light" />
 
     <FrameLayout
         android:layout_width="match_parent"
