--- a/project/res/layout/section_flight_leg_segment_tablet_details.xml
+++ b/project/res/layout/section_flight_leg_segment_tablet_details.xml
@@ -15,8 +15,8 @@
             android:layout_marginTop="6dp"
             android:ellipsize="middle"
             android:singleLine="true"
-            android:textColor="@color/tablet_flight_details_primary_text_color"
-            android:textSize="18sp" />
+            android:textColor="#000000"
+            android:textSize="@dimen/tablet_flight_details_airline_textsize" />
 
     <!--
     Don't merge this into a drawableLeft of operating_carrier_text_view,
@@ -41,10 +41,10 @@
             android:layout_marginLeft="4dp"
             android:layout_marginTop="1dp"
             android:layout_toRightOf="@+id/operating_carrier_image_view"
-            android:textColor="@color/tablet_flight_details_primary_text_color"
-            android:textSize="12sp"
+            android:textColor="#7e858f"
+            android:textSize="14sp"
             android:visibility="gone"
-            app:textStyle="light" />
+            app:textStyle="bold" />
 
     <com.expedia.bookings.widget.TextView
             android:id="@+id/departure_time_text_view"
@@ -92,8 +92,8 @@
             android:layout_toLeftOf="@+id/arrival_time_text_view"
             android:layout_toRightOf="@+id/departure_time_text_view"
             app:flightLineColor="#287cb9"
-            app:waypointTextColor="#777777"
-            app:waypointTextSize="14sp"
+            app:waypointTextColor="#666666"
+            app:waypointTextSize="@dimen/tablet_flight_details_flight_trip_view_text_size"
             app:waypointTextTypeface="medium" />
 
 </com.expedia.bookings.section.FlightLegSummarySection>
