--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -32,14 +32,14 @@
     <dimen name="wallet_button_bottom_margin">8dp</dimen>
 
     <!-- Search Results -->
-    <dimen name="results_list_header_text_size">19dp</dimen>
+    <dimen name="results_list_header_text_size">19sp</dimen>
     <dimen name="results_list_header_height">56dp</dimen>
     <dimen name="results_guest_picker_padding_x">24dp</dimen>
     <dimen name="tablet_result_row_primary_text_size">16sp</dimen>
     <dimen name="tablet_result_row_price_size">21sp</dimen>
-    <dimen name="results_list_spacer_height">8dp</dimen>
+    <dimen name="results_list_spacer_height">20dp</dimen>
     <!-- note: make sure that results_list_margin_top = results_list_header_height - results_list_spacer_height -->
-    <dimen name="results_list_margin_top">48dp</dimen>
+    <dimen name="results_list_margin_top">36dp</dimen>
     <!-- Text size for destination label - search screen, left container element -->
     <dimen name="search_params_destination_text_size">25sp</dimen>
     <!-- Text size for search param labels - search screen, right container elements -->
