--- a/project/res/layout-sw600dp/snippet_search_controls.xml
+++ b/project/res/layout-sw600dp/snippet_search_controls.xml
@@ -27,9 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="16dp">
+        android:layout_marginLeft="11dp">
 
-        <com.mobiata.android.widget.AutoResizeTextView
+        <com.expedia.bookings.widget.AutoResizeTextView
             android:id="@+id/dest_btn"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
