--- a/project/res/layout/section_flight_leg_tablet_blue_card_checked.xml
+++ b/project/res/layout/section_flight_leg_tablet_blue_card_checked.xml
@@ -2,12 +2,10 @@
 <com.expedia.bookings.section.FlightLegSummarySectionTablet xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/hotel_flight_card_height_with_padding"
+    android:layout_height="@dimen/hotel_flight_card_height"
     android:background="@drawable/bg_flight_summary_row_tablet"
-    android:paddingBottom="@dimen/hotel_flight_card_padding_y"
     android:paddingLeft="@dimen/hotel_flight_card_padding_x"
-    android:paddingRight="@dimen/hotel_flight_card_padding_x"
-    android:paddingTop="@dimen/hotel_flight_card_padding_y">
+    android:paddingRight="@dimen/hotel_flight_card_padding_x" >
 
     <LinearLayout
         android:id="@+id/flight_card_details"
