--- a/project/res/layout/fragment_tablet_results_flights.xml
+++ b/project/res/layout/fragment_tablet_results_flights.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="@drawable/ab_gradient"/>
+        android:background="@drawable/top_gradient_global"/>
 
     <!-- FLIGHT LEG CONTAINER -->
     <com.expedia.bookings.widget.FrameLayoutTouchController
