--- a/project/res/layout/fragment_tablet_tripbucket_item.xml
+++ b/project/res/layout/fragment_tablet_tripbucket_item.xml
@@ -124,6 +124,8 @@
                     android:singleLine="true"
                     android:textColor="#ffffff"
                     android:textSize="16sp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
                     app:textStyle="medium"/>
 
                 <com.expedia.bookings.widget.TextView
