--- a/project/res/layout/fragment_tablet_checkout_data_form.xml
+++ b/project/res/layout/fragment_tablet_checkout_data_form.xml
@@ -37,15 +37,31 @@
             android:layout_weight="0"
             android:background="@color/divider_grey" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/header_tv"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:text="@string/traveler_num_and_category_TEMPLATE"
-            android:textSize="16dp"
-            app:textStyle="light" />
+            android:orientation="vertical">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/header_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/traveler_num_and_category_TEMPLATE"
+                android:textSize="16dp"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/header_name_match_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="@string/name_must_match_warning"
+                android:textSize="14dp"
+                android:visibility="gone"
+                app:textStyle="light" />
+
+        </LinearLayout>
 
         <View
             android:layout_width="0dp"
